# graf

./: .gitignore  Cargo.toml  PKGBUILD  README.md  maintenance.md
src/: app.rs  cli.rs  config.rs  default_config.toml  linker.rs  main.rs  main.rs.bak  ui.rs  util.rs
src/config/: themes.rs
src/graph/: input.rs  mod.rs  mod.rs.bak  physics.rs  render.rs  viewport.rs
test-wiki-medium/: index.md
test-wiki-medium/design/: accessibility.md
test-wiki-medium/design/ux/: research.md  wireframes.md
test-wiki-medium/design/visual/: color-theory.md  typography.md
test-wiki-medium/engineering/: architecture.md  performance.md
test-wiki-medium/engineering/backend/: database.md
test-wiki-medium/engineering/backend/api/: graphql.md  rest.md
test-wiki-medium/engineering/backend/auth/: jwt.md  oauth.md
test-wiki-medium/engineering/devops/: ci-cd.md  monitoring.md
test-wiki-medium/engineering/frontend/: testing.md
test-wiki-medium/engineering/frontend/css/: layout.md
test-wiki-medium/engineering/frontend/react/: hooks.md  state-mgmt.md
test-wiki-medium/team/: onboarding.md
test-wiki-medium/team/people/: alice.md  bob.md
test-wiki-medium/team/standup/: retro.md
test-wiki-medium/team/standup/2024-q1/: week-01.md  week-02.md
test-wiki-small/: index.md
test-wiki-small/notes/: draft.md  idea-a.md  idea-b.md  idea-c.md  scratch.md
test-wiki-small/refs/: glossary.md  ref-1.md  ref-2.md  source.md
test-wiki/people/philosophers/: aristotle.md  kant.md
test-wiki/people/scientists/: curie.md  einstein.md  hawking.md  turing.md
test-wiki/projects/daily-notes/: readme.md
test-wiki/projects/daily-notes/2024/01/: 15.md  16.md
test-wiki/projects/daily-notes/2024/02/: 03.md
test-wiki/projects/project-alpha/: overview.md
test-wiki/projects/project-beta/: overview.md
test-wiki/projects/project-beta/notes/: meeting-2024-01.md  meeting-2024-02.md
test-wiki/topics/philosophy/epistemology/: overview.md
test-wiki/topics/science/: chemistry.md
test-wiki/topics/technology/: databases.md
test-wiki/topics/technology/ai/: nlp.md
test-wiki/topics/technology/programming/: paradigms.md
(+35 files in other folders)
