[package]
name = "graf"
version = "0.4.11"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
fdg-sim = "0.9"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
directories = "5"
anyhow = "1"
glob = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
